@@ -28,6 +28,7 @@ public class StatusCodes {
     public static final int UNSUPPORTED_API_VERSION = 112;
     public static final int NON_UNIQUE_RESULT_FOUND = 113;
     public static final int NO_RESOURCE_FOUND = 114;
+    public static final int DEPRECATED_PARAMETER = 115;
     
     /**
      * 200 status codes general JSON serialization error
